syntax = "proto3";

package pbsvrdemo;

service SimpleServer {
  rpc SayHello (SimpleHello) returns (SimpleHelloReply) {}
}

message SimpleHello {
  string transid = 1;
  string name = 2;
}

message SimpleHelloReply {
  string transid = 1;
  string name = 2;
  string ack = 3;
}
